# rust-grpc-server

./: .editorconfig  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml
.github/workflows/: build.yml
cdk/: cdk.context.json  cdk.json  package-lock.json  package.json
cdk/lib/: grpc-ecs-service-stack.ts
configure/: default.conf  nginx.conf  supervisord.conf
proto/: hello.proto  message.proto
src/: client.rs  main.rs
