[package]
edition = "2021"
name = "grpc-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
chrono = {version = "0.4", features = ["serde"]}
env_logger = "0.11.3"
log = "0.4"
prost = "0.12"

tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.11"
tonic-health = "0.11.0"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "grpc-server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
